# ai_cv_creator

./: .gitignore  Cargo.toml  docker-compose.yaml  readme.md
.sqlx/: query-6c2049f8c2c5a68155dadfe850c09e4fc8e17e0cfb35be873c3854b159ddbd5c.json  query-d2b2ab283bd2a884496e5ace367752d0bcdc69941474748838ecbbd1f19e8c23.json
api/: Cargo.toml  Dockerfile
api/.sqlx/: query-725209e6bc8384948b89133a39800763370460dc2cf20a1f90c031e57180ec30.json
api/src/: ask.rs  dialogue.rs  main.rs  message.rs  openai.rs  pdf.rs  storage.rs  user.rs
api/src/data/: prompt_answers.txt  prompt_profession.txt  prompt_questions.txt  prompt_resume.txt
migrations/: 20240530213601_users.sql
src/: ask.rs  db.rs  dialogue.rs  main.rs  message.rs  openai.rs  user.rs
src/data/: prompt_answers.txt  prompt_profession.txt  prompt_questions.txt  prompt_resume.txt
tg-bot/: Cargo.toml  Dockerfile
tg-bot/.sqlx/: query-2458f8852dd4922cfffc258dfc3f67663304d58cc51d2675a9225975a4cfb490.json  query-791fb19bd259a900c1e9d5f5666fcbe7e616adc2e9dd1884aced066336dcd05d.json  query-83c3c5aee7d889798ec776600ac6eba685e209dfb62e9d4ab670f3a0fe9efc14.json  query-f12b8032355ed97aebe5558c6736e135bc6106c4d0b521b24154aca9e24fa4f5.json
tg-bot/migrations/: 20240602170332_telegram.sql
tg-bot/src/: main.rs
