[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
async-openai = "0.21.0"
tokio = { version = "1.37.0", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
serde_json = "1.0.117"
serde = "1.0.202"
derivative = "2.2.0"
sqlx = { version = "0.7.4", features = [ "postgres", "runtime-tokio-native-tls", "migrate" ] }
axum = "0.7.5"
tower = { version = "0.4.13", features = ["timeout"] }
tower-http = {  version = "0.5.2", features = ["add-extension", "trace"] }
tempfile = "3.10.1"
uuid = { version = "1.8.0", features = ["v4"] }
aws-sdk-s3 = "1.33.0"
