[package]
name = "tg-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
reqwest = { version = "0.12.4", features = ["json"] }
serde = "1.0.203"
sqlx = { version = "0.7.4", features = [ "postgres", "runtime-tokio-native-tls", "migrate", "chrono" ] }
teloxide = { version = "0.12.2", features = ["macros"] }
tokio = { version = "1.37.0", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
uuid = { version = "1.8.0", features = ["v4"] }
serde_json = "1.0.117"
tempfile = "3.10.1"
